--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 body{
-    
+    color: white;
+    background-color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    padding: 10em;
+}
+
+#logo{
+    size: 200em;
 }
