--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
 body{
     color: white;
     background-color: black;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     text-align: center;
     padding: 10em;
 }
 
-#logo{
-    size: 200em;
+#searchbar{
+    border: 5px solid;
+    border-radius: 5px;
+    width: 500px;
+    margin-right: 10px;
 }
