--- a/style.css
+++ b/style.css
@@ -4,11 +4,24 @@ body{
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     text-align: center;
     padding: 10em;
+    flex
 }
 
-#searchbar{
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#searchbar {
     border: 5px solid;
     border-radius: 5px;
     width: 500px;
     margin-right: 10px;
+    flex: 50%;
 }
+
+@media (max-width: 320px) {
+    .flex-item-right, .flex-item-left {
+      flex: 100%;
+    }
+  }
